logs/DIAG_FACTS.txt
=== FACTS ===
TK_HELLO_NOW : PASS
LAST_EXIT    : -1

=== TAILS ===

--- annot_gui_last.log ---
[16:40:16] [SAVE] img_010424.csv pts=17 OK
[16:40:16] [LOAD] img_014428.png pts=17/17 scale=False
[16:40:19] [SAVE] img_014428.csv pts=17 OK
[16:40:19] [LOAD] img_015429.png pts=17/17 scale=False
[16:40:21] [SAVE] img_015429.csv pts=17 OK
[16:40:22] [LOAD] img_017431.png pts=17/17 scale=False
[16:40:34] [LOAD] img_017431.png pts=17/17 scale=False
[16:40:48] [LOAD] img_017431.png pts=17/17 scale=False
[16:41:01] [SAVE] img_017431.csv pts=17 OK
[16:41:01] [LOAD] img_018432.png pts=17/17 scale=False
[16:41:06] [SAVE] img_018432.csv pts=17 OK
[22:25:58] STAGE0: import module
[22:25:58] FATAL: FileNotFoundError(2, 'No such file or directory')
Traceback (most recent call last):
  File "D:\GM\tools\2_Landmarking_v1.0\run_gui_wrapper.py", line 12, in <module>
    mod=importlib.util.module_from_spec(spec); spec.loader.exec_module(mod)
                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1073, in get_code
  File "<frozen importlib._bootstrap_external>", line 1130, in get_data
FileNotFoundError: [Errno 2] No such file or directory: 'D:\\GM\\tools\\annot_gui_custom.py'
[22:29:50] STAGE0: import module
[22:29:50] STAGE1: module loaded
[22:29:50] FATAL: AttributeError("'_tkinter.tkapp' object has no attribute 'toggle_qc'")
Traceback (most recent call last):
  File "D:\GM\tools\2_Landmarking_v1.0\run_gui_wrapper.py", line 15, in <module>
    rc=mod.main() if hasattr(mod,'main') else 0
       ^^^^^^^^^^
  File "D:\GM\tools\2_Landmarking_v1.0\annot_gui_custom.py", line 736, in main
    app = AnnotGUI(a.root, a.images, N, start_from=a.start_from, scale_wizard=a.scale_wizard)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\GM\tools\2_Landmarking_v1.0\annot_gui_custom.py", line 164, in __init__
    self.btnQC = tk.Button(top, text="Quick Check (F9)", command=self.toggle_qc)
                                                                 ^^^^^^^^^^^^^^
  File "D:\Users\artae\AppData\Local\Programs\Python\Python311\Lib\tkinter\__init__.py", line 2410, in __getattr__
    return getattr(self.tk, attr)
           ^^^^^^^^^^^^^^^^^^^^^^
AttributeError: '_tkinter.tkapp' object has no attribute 'toggle_qc'
[22:43:56] STAGE0: import module
[22:43:56] FATAL: SyntaxError('unexpected character after line continuation character', ('D:\\GM\\tools\\2_Landmarking_v1.0\\annot_gui_custom.py', 111, 10, '        \\"\\"\\"Safe Quick Check click handler (placeholder).\n', 111, 0))
Traceback (most recent call last):
  File "D:\GM\tools\2_Landmarking_v1.0\run_gui_wrapper.py", line 12, in <module>
    mod=importlib.util.module_from_spec(spec); spec.loader.exec_module(mod)
                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "D:\GM\tools\2_Landmarking_v1.0\annot_gui_custom.py", line 111
    \"\"\"Safe Quick Check click handler (placeholder).
     ^
SyntaxError: unexpected character after line continuation character
[22:46:41] STAGE0: import module
[22:46:41] FATAL: SyntaxError('unexpected character after line continuation character', ('D:\\GM\\tools\\2_Landmarking_v1.0\\annot_gui_custom.py', 111, 10, '        \\"\\"\\"Safe Quick Check click handler (placeholder).\n', 111, 0))
Traceback (most recent call last):
  File "D:\GM\tools\2_Landmarking_v1.0\run_gui_wrapper.py", line 12, in <module>
    mod=importlib.util.module_from_spec(spec); spec.loader.exec_module(mod)
                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "D:\GM\tools\2_Landmarking_v1.0\annot_gui_custom.py", line 111
    \"\"\"Safe Quick Check click handler (placeholder).
     ^
SyntaxError: unexpected character after line continuation character
[22:58:00] STAGE0: import module
[22:58:00] FATAL: SyntaxError('unexpected character after line continuation character', ('D:\\GM\\tools\\2_Landmarking_v1.0\\annot_gui_custom.py', 111, 10, '        \\"\\"\\"Safe Quick Check click handler (placeholder).\n', 111, 0))
Traceback (most recent call last):
  File "D:\GM\tools\2_Landmarking_v1.0\run_gui_wrapper.py", line 12, in <module>
    mod=importlib.util.module_from_spec(spec); spec.loader.exec_module(mod)
                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "D:\GM\tools\2_Landmarking_v1.0\annot_gui_custom.py", line 111
    \"\"\"Safe Quick Check click handler (placeholder).
     ^
SyntaxError: unexpected character after line continuation character

--- now_stdout_20251113_225800.txt ---

--- now_stderr_20251113_225800.txt ---

--- hello_tk_check_20251113_225800.out.txt ---
PY 3.11.6 (tags/v3.11.6:8b6ee5b, Oct  2 2023, 14:57:12) [MSC v.1935 64 bit (AMD64)]
TK HELLO: PASS

--- compile_20251113_224641.txt ---
